[package]
name = "type-racer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3"
# hyper = { version = "1.6", features = ["server", "http1"] }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
dashmap = "6.1"
bytes = "1.10"
